--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- Submit Button -->
   <button id="sendMessage">Send Message</button>
-</div><
+  </div>
 
   <script src="script.js"></script>
 </body>
